k8s/app_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: {APP_NAME}-{TARGET_ROLE}
  labels:
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: {APP_NAME}
      tier: backend
      role: {TARGET_ROLE}
  template:
    metadata:
      labels:
        app: {APP_NAME}
        tier: backend
        role: {TARGET_ROLE}
    spec:
      imagePullSecrets:
      - name: regcred
      serviceAccountName: symper
      containers:
      - name: {APP_NAME}
        ports:
        - containerPort: 1323
        image: registry.symper.vn/{SYMPER_IMAGE}
        resources:
          requests:
            memory: "50Mi"
            cpu: "50m"
          limits:
            memory: "500Mi"
            cpu: "500m"
        lifecycle:
            postStart:
              exec:
                command: [ "/bin/sh","-c","rm /app/.env && cp .env /app" ]
        volumeMounts:
        - name: config-env
          mountPath: /src
        - name: authorization-key
          mountPath: /app/crypt
          readOnly: true
        - name: logging
          mountPath: /app/request-log
      volumes:
      - name: config-env
        configMap:
          name: app-config-{APP_NAME}
      - name: logging
        hostPath:
          path: /var/log/symper/{APP_NAME}
      - name: authorization-key
        projected:
          sources:
          - secret:
              name: authorization-public-key
