k8s/service_ingress.yaml
apiVersion: v1
kind: Service
metadata:
    name: {APP_NAME}
spec:
    selector:
      app: {APP_NAME}
      tier: backend
      role: {CURRENT_ROLE}
    ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 1323
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: {APP_NAME}
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - {HOST_DOMAIN}
    secretName: symper-tls
  rules:
  - host: {HOST_DOMAIN}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
             name: {APP_NAME}
             port:
                number: 80
